--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "dkms-2.0.19.tar.gz": a7a31de8d2d4057c47e892b3d55f060e05230f1a
+  dkms-2.2.0.3.tar.gz: cff053af3fd6fde3011bb892c39f6c810c84d1e8
