update to latest code from git

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  dkms-2.2.0.3.tar.gz: cff053af3fd6fde3011bb892c39f6c810c84d1e8
+  dkms-2.2.0.3.1.tar.xz: 1c0a5d5b295c5e4f3db1793626a296c6d2c171c2
