--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   dkms-2.2.0.3.1.tar.xz: 97f69a47593c4baa4b2323d5eafcf06cf24b49ac
+  v2.6.1.tar.gz: 9cdfecc29116d578e693cf3273ea9695d9471cf2
