--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  v2.8.4.tar.gz: 68d8b6b410a9204f54dc95b643d54ecb7c72acca
+  dkms-3.1.4.tar.gz: ba375ce223a73f1c9e47aea6021da392e823af0c
+
